<resources>
    <string name="app_name">presentation</string>
    <string name="font_farsi_regular">fonts/iran_yekan_farsi_number_regular.ttf</string>
    <string name="font_regular">fonts/iran_yekan_web_regular.ttf</string>
    <string name="font_bold">fonts/iran_yekan_web_bold.ttf</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">ثبت نام</string>
    <string name="recover_password">بازیابی رمز عبور</string>
    <string name="login">ورود</string>
    <string name="register_description">برای ورود لطفا شماره موبایل خود را وارد کنید</string>
    <string name="activation_description">کد پیامک شده را وارد کنید</string>
    <string name="fingerprint_description">از دفعات بعدی می توانید با اثر انگشت وارد شوید </string>
    <string name="fingerprint_description_2">یا کلیک روی تصویر زیر</string>
    <string name="submit_and_continue">ثبت و ادامه</string>
    <string name="continue_">ادامه</string>
    <string name="change_phone_number">تغییر شماره</string>
    <string name="forget_password">فراموشی رمز</string>
    <string name="resend_code">ارسال مجدد</string>
    <string name="resend_code_after">ارسال دوباره کد بعد از</string>
    <string name="password">رمزعبور</string>
    <string name="repeat_password">تکرار رمز عبور</string>
    <string name="username_or_phone">نام کاربری (شماره تماس)</string>
    <string name="private_account">افتتاح حساب شخصی</string>
    <string name="fake_content">
        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه است
    </string>
    <string name="risk_description">شما می توانید با افزودن مقدارهایی مشخص از سهام به سبد سرمایه گذاری خود، بازدهی را افزایش بدهید اما توجه داشته باشید که افزایش میزان سهام، ریسک سرمایه گذاری شما رو نیز افزایش می دهد.
این حالت برای سرمایه گذاری های بلند مدت پیشنهاد می شود</string>
    <string name="settings">تنظیمات</string>
    <string name="support">پشتیبانی</string>
    <string name="home">خانه</string>
    <string name="profile">پروفایل</string>
    <string name="invest">سرمایه</string>
    <string name="market">بازار</string>
    <string name="invest_basket">سبد</string>
    <string name="create_account_investment">افتتاح حساب سرمایه گذاری</string>
    <string name="create_without_risk_account">افتتاح حساب بدون ریسک</string>
    <string name="create_personal_account">افتتاح حساب شخصی</string>
    <string name="create_account">انجام سرمایه گذاری </string>
    <string name="why_soodinow">با سودینو بیشترآشنا شوید ...</string>
    <string name="why_soodinow_description">مسیر های متنوع سرمایه گذاری</string>
    <string name="why_soodinow_in_page">درباره سودینو</string>
    <string name="why_soodinow_description_in_page">ارائه ابزار های هوشمند مدیریت ثروت برای  تجربه بکر و جدید یک سرمایه گذاری خودکار و شخصی سازی شده برای تمام سرمایه گذاران</string>
    <string name="more_description">توضیحات بیشتر</string>
    <string name="market_view">مشاهده بازار</string>
    <string name="all_currency">همه ارزها</string>
    <string name="market_description_card_home">شما می توانید چندین حساب سرمایه گذاری با مبالغ دلخواه خود داشته باشید</string>
    <string name="toman">ریال</string>
    <string name="rial">ریال</string>
    <string name="create_date">تاریخ افتتاح</string>
    <string name="wealth_toman">دارایی (ریال)</string>
    <string name="toman_unit">تومان</string>
    <string name="wealth_increase">رشد دارایی</string>
    <string name="last_version_update">Last version update</string>
    <string name="write_here">اینجا بنویسید</string>
    <string name="count">تعداد</string>
    <string name="volume">حجم</string>
    <string name="price">قیمت</string>
    <string name="date_colon">تاریخ :</string>
    <string name="time_colon">ساعت:</string>
    <string name="company_dividend">سهام شرکت</string>
    <string name="information">اطلاعات</string>
    <string name="summary">خلاصه</string>
    <string name="kadal">کدال</string>
    <string name="last_deal">آخرین معامله</string>
    <string name="sell">فروش</string>
    <string name="buy">خرید</string>
    <string name="observe_market">مشاهده بازار</string>
    <string name="more">بیشتر</string>
    <string name="final_price">قیمت پایانی</string>
    <string name="view_day">نمایش روزانه</string>
    <string name="trading_history">سابقه معاملات</string>
    <string name="symbol_market">بازار نماد</string>
    <string name="exchange">بورس</string>
    <string name="details_price">جزییات قیمتی</string>
    <string name="days_trading_panel">تابلوی معاملات روزانه</string>
    <string name="legal">حقوقی</string>
    <string name="substantive">حقیقی</string>
    <string name="create_personal_account_title">افتتاح حساب سرمایه گذاری شخصی</string>
    <string name="chart_title_create_personal_account">نمودار نرخ رشد حساب سرمایه گذاری شخصی</string>
    <string name="chart_title_create_without_risk_account">نمودار نرخ رشد حساب سرمایه گذاری بدون ریسک</string>
    <string name="daily">روزانه</string>
    <string name="weekly">هفتگی</string>
    <string name="long_time">بلند مدت</string>
    <string name="first_information">اطلاعات کاربری</string>
    <string name="insert_next">ثبت و ادامه</string>
    <string name="insert">ثبت</string>
    <string name="first_name">نام</string>
    <string name="name_family"> نام خانوادگی</string>
    <string name="sub_title_name_family">نام و نام خانوادگی خود را بصورت کامل بنویسید</string>
    <string name="hint_first_name">نام  خود را بصورت کامل بنویسید</string>
    <string name="hint_name_family"> نام خانوادگی خود را بصورت کامل بنویسید</string>
    <string name="email">ایمیل</string>
    <string name="hint_email"> ایمیل خود را بصورت کامل بنویسید</string>
    <string name="phone">شماره تلفن</string>
    <string name="hint_phone"> شماره تلفن خود را بصورت کامل بنویسید</string>
    <string name="national_code">کد ملی</string>
    <string name="sub_title_national_code">کد ملی خود را بدون خط تیره بنویسید</string>
    <string name="hint_national_code">کد ملی خود را بدون خط تیره بنویسید</string>
    <string name="shaba_number">شماره شبا</string>
    <string name="sub_title_shaba_number">شماره شبا بانک خود را  خود را بدون  IR  بنویسید</string>
    <string name="hint_shaba_number">شماره شبا بانک خود را  خود را بدون  IR  بنویسید</string>
    <string name="date_of_birth">تاریخ تولد</string>
    <string name="sub_title_date_of_birth">تاریخ تولد خود را دقیق انتخاب کنید</string>
    <string name="sub_title_password">رمز عبور خود را از بین اعداد و حروف  انگلیسی و فلان انتخاب کنید</string>
    <string name="hint_password">بطور مثال !@$%^JHYTED88658</string>
    <string name="connect_brokerage">اتصال به کارگزاری</string>
    <string name="how_to_account_brokerage">آیا در کارگزاری حسابی دارید؟</string>
    <string name="no_have">خیر ندارم</string>
    <string name="yes_have">بله دارم</string>
    <string name="select_brokerage">کارگزاری خود را انتخاب کنید</string>
    <string name="select_size_invest">میزان سرمایه گذاری خود را انتخاب کنید</string>
    <string name="you_size_invest">میزان سرمایه گذاری شما</string>
    <string name="increase_credit_price">این مبلغ از اعتبار کارگزاری کسر شود</string>
    <string name="this_charge_price">این مبلغ را اکنون شارژ می کنم</string>
    <string name="questionnaire">پرسشنامه</string>
    <string name="invest_simulation">شبیه سازی این سرمایه گذاری</string>
    <string name="select_day">انتخاب روز</string>
    <string name="select_month">انتخاب ماه</string>
    <string name="three_months">سه ماهه</string>
    <string name="six_months">شش ماهه</string>
    <string name="one_years">یکساله</string>
    <string name="create_without_risk_account_title">حساب سرمایه گذاری بدون ریسک</string>
    <string name="create_without_risk_account_toolbar_title"> افتتاح حساب سرمایه گذاری بدون ریسک</string>
    <string name="calculate_profit_capital_toolbar_title">محاسبه میزان سود و سرمایه شما</string>
    <string name="how_much_invest">چه میزانی می خواهید سرمایه گذاری نمایید</string>
    <string name="percent">درصد</string>
    <string name="profit_method">سبک سوددهی</string>
    <string name="wealth_you_one_years">دارایی شما بعد 1 سال</string>
    <string name="ideal"> ایده آل</string>
    <string name="low_profit">کمترین سوددهی</string>
    <string name="select_item">می توانید یکی از حالات زیر را انتخاب نمایید</string>
    <string name="create_low_risk_account">افتتاح حساب </string>
    <string name="based_on_last_year">طبق سال گذشته</string>
    <string name="highest_profit">حالت خوشبینانه و ایده آل</string>
    <string name="inventory_management">مدیریت موجودی</string>
    <string name="activity_report">گزارش </string>
    <string name="activity_report_financial">گزارش مالی </string>
    <string name="activity_report_login_exit">گزارش ورود و خروج </string>
    <string name="price_error">مبلغ وارد شده مجاز نمیباشد</string>
    <string name="create_account_not_compelet">افتتاح حساب قبلی شما هنوز  تکمیل نشده است</string>
    <string name="complete_profile">تکمیل پروفایل</string>
    <string name="complete_profile_message">لطفا اطلاعات کاربری خودر را تکمیل کنید</string>
    <string name="my_profile">پروفایل من</string>
    <string name="about_us">درباره ما</string>
    <string name="asked_question">سوالات متداول</string>
    <string name="terms_conditions">قوانین و مقررات</string>
    <string name="active_fingerprint">فعال کردن اثر انگشت</string>
    <string name="change_password">تغییر رمز عبور</string>
    <string name="introduce_friends">معرفی به دوستان</string>
    <string name="exit_app">خروج از برنامه</string>
    <string name="old_password">رمز عبور فعلی</string>
    <string name="new_password">رمز عبور جدید</string>
    <string name="repeat_new_password">تکرار رمز عبور جدید</string>
    <string name="update_profile_message">پروفایل با موفقیت بروزرسانی شد</string>
    <string name="we_send_link">لینک ما جهت ارسال</string>
    <string name="copy">کپی</string>
    <string name="introduce_friends_social">دعوت از دوستان در شبکه های اجتماعی</string>
    <string name="introduce_friends_count_title">تعداد افرادی که توسط شما معرفی شده اند</string>
    <string name="person">نفر</string>
    <string name="we_number_phone">شماره تماس ما</string>
    <string name="call_support_number">02191073240</string>
    <string name="direct_call">تماس مستقیم</string>
    <string name="call_support_desc">کارشناسان ما از ساعت 9 الی 17 پاسخگوی سوالات شما می باشند</string>
    <string name="call_support_desc_chat">برای ارتباط در سریعترین زمان به کارشناسان ما پیام دهید</string>
    <string name="online_chat">چت آنلاین</string>
    <string name="online_person">کارشناس آنلاین هستند</string>
    <string name="send">ارسال</string>
    <string name="write_question_this">سوال خود را اینجا بنویسید</string>
    <string name="account_manager_history">سابقه مدیریت حساب</string>
    <string name="cash_account">موجودی حساب</string>
    <string name="deposit_withdrawal_account">واریز و برداشت از حساب</string>
    <string name="deposit_cash">واریز</string>
    <string name="withdrawal_cash">برداشت</string>
    <string name="pull_price_message_insert">درخواست شما با موفقیت ثبت شد</string>
    <string name="gender">جنسیت</string>
    <string name="hint_gender"> جنسیت خود را انتخاب کنید</string>
    <string name="hint_province"> استان خود را انتخاب کنید</string>
    <string name="province">استان</string>
    <string name="hint_city"> شهر خود را انتخاب کنید</string>
    <string name="city"> شهر</string>
    <string name="address">آدرس</string>
    <string name="hint_address">آدرس خود را تایپ کنید</string>
    <string name="error_msg_auth_error">خطایی در احراز هویت رخ داد : %1$s</string>
    <string name="error_msg_auth_failed">عدم موفقیت در احراز هویت</string>
    <string name="error_device_does_not_support_fingerprint">
        دستگاه شما از احراز هویت با اثر انگشت پشتیبانی نمیکند
    </string>
    <string name="all">همه</string>
    <string name="transaction">تراکنش</string>
    <string name="mobile_hint">۰۹*********</string>
</resources>