<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:title="@string/settings"
        android:icon="@drawable/ic_menu_settings"/>

    <item
        android:id="@+id/support"
        android:enabled="true"
        android:title="@string/support"
        android:icon="@drawable/ic_menu_support"/>
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:title="@string/home"
        android:icon="@drawable/ic_menu_home"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:title="@string/profile"
        android:icon="@drawable/ic_menu_profile"/>
    <item
        android:id="@+id/market"
        android:enabled="true"
        android:title="@string/market"
        android:icon="@drawable/ic_menu_market"/>
</menu>