<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_green"
    tools:context=".ui.register.RegisterFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />


    <View
        android:id="@+id/container"
        style="@style/TopRoundedCornerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/top_round_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoImage"
        android:layout_width="@dimen/sign_logo_size"
        android:layout_height="@dimen/sign_logo_size"
        android:layout_marginTop="@dimen/margin_l"
        android:src="@drawable/ic_icon_register"
        app:layout_constraintBottom_toTopOf="@id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/container"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        style="@style/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_45dp"
        android:text="@string/forget_password"
        app:layout_constraintBottom_toTopOf="@id/phone_number_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintVertical_chainStyle="packed" />


    <com.paya.presentation.utils.editText.MobileEditText
        android:id="@+id/phone_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_64dp"
        android:layout_marginBottom="@dimen/margin_l"
        app:labelText="@string/register_description"
        app:layout_constraintBottom_toTopOf="@id/submitButton"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintVertical_chainStyle="packed"
        android:hint="@string/mobile_hint"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        style="@style/SignInButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_medium"
        android:layout_marginTop="@dimen/margin_l"
        android:text="@string/submit_and_continue"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintVertical_bias="1" />


    <include
        layout="@layout/loading_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
