<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_green"
        tools:context=".ui.login.LoginFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.09" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.97" />

        <View
            android:id="@+id/container"
            style="@style/TopRoundedCornerLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/top_round_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_top" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoImage"
            android:layout_width="@dimen/sign_logo_size"
            android:layout_height="@dimen/sign_logo_size"
            android:layout_marginTop="@dimen/margin_l"
            android:src="@drawable/ic_icon_login"
            app:layout_constraintBottom_toTopOf="@id/title_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_top_logo"
            app:layout_constraintTop_toTopOf="@id/container"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_txt"
            style="@style/TitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@id/phoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/logoImage"
            app:layout_constraintVertical_chainStyle="packed" />


        <com.paya.presentation.utils.editText.MobileEditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/username_or_phone"
            app:layout_constraintBottom_toTopOf="@id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@id/title_txt"
            app:layout_constraintVertical_chainStyle="packed"
            android:hint="@string/mobile_hint"/>

        <com.paya.presentation.utils.editText.InputEditText
            android:id="@+id/passwordLayout"
            layout="@layout/input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/forget_password"
            app:layout_constraintTop_toBottomOf="@id/phoneNumber"
            app:layout_constraintVertical_chainStyle="packed" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_m"
            android:text="@string/forget_password"
            android:textColor="@color/dark_blue"
            app:layout_constraintBottom_toTopOf="@id/description_layout"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description_layout"
            style="@style/SubtitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_l"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/margin_medium"
            android:text="@string/fingerprint_description_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fingerprint"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/forget_password"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fingerprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_layout"
            android:layout_marginBottom="@dimen/margin_l"
            app:layout_constraintBottom_toTopOf="@id/submitButton"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_fingerprint_2"
            android:scaleType="fitStart"/>

        <Button
            android:id="@+id/submitButton"
            style="@style/SignInButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_medium"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
            app:layout_constraintVertical_bias="1" />


        <include
            layout="@layout/loading_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
