<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_green"
    tools:context=".ui.setPassword.SetPasswordFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />


    <View
        android:id="@+id/container"
        style="@style/TopRoundedCornerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:background="@drawable/top_round_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_top" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoImage"
        android:layout_width="@dimen/sign_logo_size"
        android:layout_height="@dimen/sign_logo_size"
        android:layout_marginTop="@dimen/margin_l"
        android:src="@drawable/ic_icon_password"
        app:layout_constraintBottom_toTopOf="@id/title_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/container"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_txt"
        style="@style/TitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xl"
        android:text="@string/new_password"
        app:layout_constraintBottom_toTopOf="@id/newPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintVertical_chainStyle="packed" />


    <com.paya.presentation.utils.editText.InputEditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xl"
        android:inputType="textPassword"
        app:labelText="@string/password"
        app:layout_constraintBottom_toTopOf="@id/repeatPassword"
        app:layout_constraintTop_toBottomOf="@id/title_txt"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.paya.presentation.utils.editText.InputEditText
        android:id="@+id/repeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_s"
        android:layout_marginBottom="@dimen/margin_l"
        android:inputType="textPassword"
        app:labelText="@string/repeat_password"
        app:layout_constraintBottom_toTopOf="@id/submitButton"
        app:layout_constraintTop_toBottomOf="@id/newPassword"
        app:layout_constraintVertical_chainStyle="packed" />


    <Button
        android:id="@+id/submitButton"
        style="@style/SignInButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_medium"
        android:text="@string/submit_and_continue"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintVertical_bias="1"
        tools:layout_editor_absoluteX="60dp" />


    <include
        layout="@layout/loading_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>