<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        tools:context=".ui.activitiesReport.FinancialReportFragment">

        <com.paya.presentation.utils.toolbar.ToolbarPublic
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:toolbarTitle="@string/transaction"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/calenderCardView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/margin_l"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:background="@drawable/shadow_4dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/calenderbtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="center"
            android:src="@drawable/ic_calendar_gray"
            app:layout_constraintBottom_toBottomOf="@id/calenderCardView"
            app:layout_constraintEnd_toEndOf="@id/calenderCardView"
            app:layout_constraintStart_toStartOf="@id/calenderCardView"
            android:elevation="2dp"
            app:layout_constraintTop_toTopOf="@id/calenderCardView" />


        <View
            android:id="@+id/tabCardView"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="@dimen/margin_l"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toEndOf="@id/calenderCardView"
            android:background="@drawable/shadow_4dp"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_s"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:tabGravity="fill"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/brokerage_tab_color"
            app:layout_constraintTop_toTopOf="@id/tabCardView"
            app:layout_constraintBottom_toBottomOf="@id/tabCardView"
            app:layout_constraintEnd_toEndOf="@id/tabCardView"
            app:layout_constraintStart_toStartOf="@id/tabCardView"
            app:tabBackground="@drawable/selector_tab_brokerage">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdrawal_cash" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deposit_cash" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all" />


        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/financialRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabCardView"
            tools:itemCount="10"
            tools:listitem="@layout/item_financial_report"
            android:layout_marginTop="@dimen/margin_l"/>

        <include
            layout="@layout/loading_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            tools:visibility="gone"
            android:id="@+id/loadingView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>