<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/count_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/volume_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/countText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:text="@string/count"
        android:textColor="@color/purple_gray"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/countView"/>

    <View
        android:id="@+id/countView"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/black_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/count_guideline"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/volumeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:gravity="center"
        android:text="@string/volume"
        android:textColor="@color/purple_gray"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/count_guideline"
        app:layout_constraintEnd_toStartOf="@id/volumeView"/>

    <View
        android:id="@+id/volumeView"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/black_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/volume_guideline"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/priceText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:text="@string/price"
        android:textColor="@color/purple_gray"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/volume_guideline"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>